Fixes #552 Part of the Edit File Metadata table in item edit form is invisible.

--- a/admin/themes/default/css/screen.css
+++ b/admin/themes/default/css/screen.css
@@ -26,7 +26,7 @@ body {font:62.5% "Lucida Grande",Helvetica, Arial, sans-serif; background:#eae9d
 	/* Headings */
 	h1,#site-title {font-weight:normal; font-size:2.2em; margin-bottom:1em; line-height:1em;margin-right:12em;}
 	h2, legend {font-size:1.8em; font-weight:normal; line-height:1.2em; margin-bottom:1.2em;}
-	h3 {font-size:1.4em; line-height:1.2em; margin-bottom:1.2em;}
+	h3 {font-size:1.4em; line-height:1.2em; margin-bottom:0.4em;}
 	h4 {font-size:1.2em; line-height:1.5em; font-weight:bold;}
 	h5 {font-size:1.2em; line-height:1.5em; font-style:italic;}
 	
@@ -202,6 +202,8 @@ body {font:62.5% "Lucida Grande",Helvetica, Arial, sans-serif; background:#eae9d
 			
 			input.add-element, input.remove-element {cursor:pointer;font-size:1.1em;padding-top:0; background-position: 0 50%;padding-bottom:0px;}
 	
+		#file-inputs a {float:left;display:block; font-size:1.2em; margin-left: 132px;margin-top:6px;}
+		#file-inputs input {margin-bottom:6px;}
 	#delete_item_link {padding: 18px 8px 8px 0;}
 	#delete_item_link .delete {font-weight:bold;background-position:0 50%;padding-left:36px; color: #900;}
 	
